force-app/main/default/objects/DepartmentCourseGroup__c/DepartmentCourseGroup__c.object-meta.xml
<CustomObject>
    <label>Department Course Group</label>
    <nameField>
        <displayFormat>DCG-{0000}</displayFormat>
        <label>Department Course Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Department Course Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>