force-app/main/default/objects/DepartmentCourseGroup__c/fields/DepartmentCourse__c.field-meta.xml
<CustomField>
    <fullName>DepartmentCourse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department Course</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Cannot add group to an inactive department course</errorMessage>
        <filterItems>
            <field>DepartmentCourse__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DepartmentCourse__c</referenceTo>
    <relationshipLabel>Groups</relationshipLabel>
    <relationshipName>DepartmentCourseGroups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>