force-app/main/default/objects/DepartmentCourseGroup__c/fields/StudentGroup__c.field-meta.xml
<CustomField>
    <fullName>StudentGroup__c</fullName>
    <label>Student Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>StudentGroup__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>StudentGroup__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>DepartmentCourseGroups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>